--- a/vignettes/Markov_age_dep.Rmd
+++ b/vignettes/Markov_age_dep.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Time Dependent Markov Model"
+title: "Markov Tutorial Age Dependent"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Time Dependent Markov Model}
+  %\VignetteIndexEntry{Markov Tutorial Age Dependent}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -14,11 +14,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette replicates our Advanced tutorial for Markov models in *Medical Decision Making*:  
+This vignette replicates the age dependent part of the Advanced tutorial for Markov models in *Medical Decision Making*:  
 
 *Alarid-Escudero, F., Krijkamp, E., Enns, E. A., Yang, A., Hunink, M. M., Pechlivanoglou, P., & Jalal, H. (2023). A tutorial on time-dependent cohort state-transition models in r using a cost-effectiveness analysis example. Medical Decision Making, 43(1), 21-41.*
 
 This vignette builds on the previous introductory tutorial. If you haven't already, please review the introductory Markov tutorial first. 
+
+The results may be slightly different from the tutorial. The reason is that the tutorial applies a within cycle correction and also assumes that transition rewards happen after the transition.  gmod links the transition rewards to the events so they occur during each cycle. 
 
 First, install gmod using devtools.  Also, make sure to enable use_vignettes so that vignettes render correctly.
 ```{r}
@@ -32,21 +34,25 @@ library(gmod)
 library(magrittr)
 ```
 
+Define the model structure.  Note that the model is structured in a way that the event "die" happens first and if one survives they go to the rest of the evnets, whether recover, getsick progress or stay in their health state depending on where they were and the decision taken
 ```{r}
 mygmod <- gmod(model_type = "Markov", n_cycles = 75) + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states("H", "S1", "S2", "D") + 
   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
-  initial_probs(states = "H", probs = 1) +  
+  initial_probs(states = "H", probs = 1) +
+  event_mapping(event = "die",  
+              values = c(T, F), 
+              results = c("D", "get_event"), 
+              probs = c(pDie(state, cycle, v_r_mort_by_age), Inf)) +  
   event_mapping(event = "get_event",  
-                values = c("recover", "getsick", "progress", "die", "stay"), 
-                results = c("H", "S1", "S2", "D", curr_state()), 
+                values = c("recover", "getsick", "progress", "stay"), 
+                results = c("H", "S1", "S2", curr_state()), 
                 probs = c(pRecover(state), 
                           pGetSick(state), 
-                          pProgress(state, decision, cycle_in_S1), 
-                          pDie(state, cycle, v_r_mort_by_age), 
+                          pProgress(state, decision), 
                           Inf)) +  
-  payoffs(cost = cost(state, decision, get_event), 
+  payoffs(cost = cost(state, decision, get_event, die), 
           utility = utility(state, decision, get_event))
 ```
 
@@ -59,22 +65,18 @@ The `curr_state()` is a build-in function that instructs gmod to compute the pro
 Before we can evaluate the model, first we need to pass the parameter values. Here we use the global environment to define those. Later, we show how to pass these as a parameter list `param` which will be helpful for analyses such as probabilistic sensitivity analyses. 
 
 ```{r}
-n_age_init <- 25  # age at baseline
+n_age_init <- 25 - 1 # age at baseline - gmod starts from cycle 1 instead of 0 as in the tutorial. 
 n_age_max  <- 100 # maximum age of follow up
 
 ### Transition rates (annual), and hazard ratios (HRs) ----
 r_HS1  <- 0.15  # constant annual rate of becoming Sick when Healthy
 r_S1H  <- 0.5   # constant annual rate of becoming Healthy when Sick
+r_S1S2 <- 0.105 # constant annual rate of becoming Sicker when Sick
 hr_S1  <- 3     # hazard ratio of death in Sick vs Healthy 
 hr_S2  <- 10    # hazard ratio of death in Sicker vs Healthy 
 
 ### Effectiveness of treatment B ----
 hr_S1S2_trtB <- 0.6  # hazard ratio of becoming Sicker when Sick under treatment B
-
-#* Weibull parameters for state-residence-dependent transition probability of 
-#* becoming Sicker when Sick conditional on surviving
-r_S1S2_scale <- 0.08 # scale
-r_S1S2_shape <- 1.1  # shape
 
 ## Age-dependent mortality rates ----
 lt_usa_2015 <- read.csv("../data/LifeTable_USA_Mx_2015.csv")
@@ -87,7 +89,7 @@ v_r_mort_by_age <- lt_usa_2015 %>%
 ```
 
 
-
+Define the cost and utilities 
 ```{r}
 ### State rewards ----
 #### Costs ----
@@ -105,12 +107,10 @@ u_D    <- 0     # annual utility of being dead
 u_trtA <- 0.95  # annual utility when receiving treatment A
 
 ### Transition rewards ----
-du_HS1 <- 0.01  # disutility when transitioning from Healthy to Sick
-ic_HS1 <- 1000  # increase in cost when transitioning from Healthy to Sick
-ic_D   <- 2000  # increase in cost when dying
+du_HS1 <- 0.01  # disutility when the event get sick happens which is conditional on not dying.
+ic_HS1 <- 1000  # increase in cost when the event get sick occurs conditional on not dying. 
+ic_D   <- 2000  # increase in cost when the die event occurs.
 ```
-
-
 
 
 The model has six user-defined functions: four for computing probabilities `pRecover()`, `pGetSick()`, `pProgress()` and `pDie()`, and 2 for payoffs `cost()` and `utility()`.  
@@ -139,21 +139,13 @@ pGetSick <- function(state){
 
 probability of progress is slightly more complex as it is a function of both the state and the decision.  
 ```{r}
-pProgress <- function(state, decision, cycle_in_S1){
-  if (state=="S1"){
-  hr_S1S2 <- if (decision %in% c("StrategyB", "StrategyAB")) hr_S1S2_trtB else 1
+pProgress <- function(state, decision){ #, cycle_in_S1){
   
-  r_S1S2_tunnels <- (cycle_in_S1*r_S1S2_scale)^r_S1S2_shape - 
-                    ((cycle_in_S1 - 1)*r_S1S2_scale)^r_S1S2_shape
-  
-  p_S1S2_tunnels <- rate2prob(r_S1S2_tunnels)
-     
-  rProgress <- (state=="S1") * r_S1S2_tunnels * hr_S1S2
+  hr_S1S2 <- if (decision %in% c("StrategyB","StrategyAB")) hr_S1S2_trtB else 1
+  rProgress <- (state=="S1") * r_S1S2 * hr_S1S2
   
   rate2prob(rProgress)
-  } else {
-    0
-  }
+
 }
 ```
 hr_S1S2 is a function of the decision if it contains "B" then it is hr_S1S2_trtB otherwise is 1.  then the rate of progression is only conditional on state being S1 which gets multiplied by the r_S1S2 and the hr_S1S2.
@@ -183,10 +175,10 @@ pDie <- function(state, cycle, v_r_mort_by_age){
 
 The payoffs are a cost and utility function. Both are dependent on both the state and the decision. For example only those in S1 and S2 receive treatment.
 ```{r}
-cost <- function(state, decision, get_event){
+cost <- function(state, decision, get_event, die){
   # cost of decision is only applied if the state is either S1 or S2
   trans_cost_getting_sick <- (get_event=="getsick")*ic_HS1 # increase in cost when transitioning from Healthy to Sick
-  trans_cost_dying <- (get_event=="die")*ic_D # increase in cost when dying
+  trans_cost_dying <- (die==TRUE)*ic_D # increase in cost when dying
 
   if (state %in% c("S1","S2")){
     c_decision <- switch(decision,
@@ -204,20 +196,20 @@ cost <- function(state, decision, get_event){
          "S2" = c_S2,
          "D" = c_D)
   # combine both
-  return(c_decision + c_state)
+  return(c_decision + c_state + trans_cost_getting_sick + trans_cost_dying)
 }
 ```
 
 Similarly the utility function is a function of the state and decision. For H, S2 and D, the utility is independent of the decision. But, Strategies involving "A" improve the utility of S1 from u_S1 to u_trtA. One way to code this is:
 ```{r}
 utility <- function(state, decision, get_event){
-  trans_util_getting_sick <- du_HS1*(get_event=="getsick")
+  trans_util_getting_sick <- -du_HS1*(get_event=="getsick")
   u_state <- switch(state, 
          "H" = u_H,
          "S1" = if (decision %in% c("StrategyA", "StrategyAB")) u_trtA else u_S1,
          "S2" = u_S2,
          "D" = u_D)
-  return(du_HS1 + u_state)
+  return(u_state + trans_util_getting_sick)
 }
 ```
 
