added gen markov model and decision trees

--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -35,7 +35,7 @@ library(magrittr)
 ```
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 75) + 
+mygmod <- gmod(model_type = "Markov", n_cycles = 3) + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states("H", "S1", "S2", "D") + 
   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
@@ -70,19 +70,19 @@ n_age_init <- 25 - 1 # age at baseline gmod starts at cycle 1 instead of 0 in th
 n_age_max  <- 100 # maximum age of follow up
 
 ### Transition rates (annual), and hazard ratios (HRs) ----
-r_HS1  <- 0.15  # constant annual rate of becoming Sick when Healthy
-r_S1H  <- 0.5   # constant annual rate of becoming Healthy when Sick
-hr_S1  <- 3     # hazard ratio of death in Sick vs Healthy 
-hr_S2  <- 10    # hazard ratio of death in Sicker vs Healthy 
-
-### Effectiveness of treatment B ----
-hr_S1S2_trtB <- 0.6  # hazard ratio of becoming Sicker when Sick under treatment B
-
-#* Weibull parameters for state-residence-dependent transition probability of 
-#* becoming Sicker when Sick conditional on surviving
-r_S1S2_scale <- 0.08 # scale
-r_S1S2_shape <- 1.1  # shape
-
+#r_HS1  <- 0.15  # constant annual rate of becoming Sick when Healthy
+#r_S1H  <- 0.5   # constant annual rate of becoming Healthy when Sick
+#hr_S1  <- 3     # hazard ratio of death in Sick vs Healthy 
+#hr_S2  <- 10    # hazard ratio of death in Sicker vs Healthy 
+#
+#### Effectiveness of treatment B ----
+#hr_S1S2_trtB <- 0.6  # hazard ratio of becoming Sicker when Sick under treatment B
+#
+##* Weibull parameters for state-residence-dependent transition probability of 
+##* becoming Sicker when Sick conditional on surviving
+#r_S1S2_scale <- 0.08 # scale
+#r_S1S2_shape <- 1.1  # shape
+#
 ## Age-dependent mortality rates ----
 lt_usa_2015 <- read.csv("../data/LifeTable_USA_Mx_2015.csv")
 #* Extract age-specific all-cause mortality for ages in model time horizon
@@ -96,25 +96,100 @@ v_r_mort_by_age <- lt_usa_2015 %>%
 
 
 ```{r}
+```
+
+
+```{r}
+n_age_init <- 25 - 1 # age at baseline gmod starts at cycle 1 instead of 0 in the tutorial
+n_age_max  <- 100 # maximum age of follow up
+
+### Transition rates (annual), and hazard ratios (HRs) ----
+#r_HS1  <- 0.15  # constant annual rate of becoming Sick when Healthy
+#r_S1H  <- 0.5   # constant annual rate of becoming Healthy when Sick
+#hr_S1  <- 3     # hazard ratio of death in Sick vs Healthy 
+#hr_S2  <- 10    # hazard ratio of death in Sicker vs Healthy 
+#
+#### Effectiveness of treatment B ----
+#hr_S1S2_trtB <- 0.6  # hazard ratio of becoming Sicker when Sick under treatment B
+#
+##* Weibull parameters for state-residence-dependent transition probability of 
+##* becoming Sicker when Sick conditional on surviving
+#r_S1S2_scale <- 0.08 # scale
+#r_S1S2_shape <- 1.1  # shape
+#
+### Age-dependent mortality rates ----
+#lt_usa_2015 <- read.csv("../data/LifeTable_USA_Mx_2015.csv")
+#* Extract age-specific all-cause mortality for ages in model time horizon
+v_r_mort_by_age0 <- lt_usa_2015 %>% 
+  dplyr::filter(Age >= n_age_init & Age < n_age_max) %>%
+  dplyr::select(Total) %>%
+  as.matrix() # anyone above 100 have the same mortality
+
+```
+
+
+
+```{r}
 ### State rewards ----
 #### Costs ----
-c_H    <- 2000  # annual cost of being Healthy
-c_S1   <- 4000  # annual cost of being Sick
-c_S2   <- 15000 # annual cost of being Sicker
-c_D    <- 0     # annual cost of being dead
-c_trtA <- 12000 # annual cost of receiving treatment A
-c_trtB <- 13000 # annual cost of receiving treatment B
+#c_H    <- 2000  # annual cost of being Healthy
+#c_S1   <- 4000  # annual cost of being Sick
+#c_S2   <- 15000 # annual cost of being Sicker
+#c_D    <- 0     # annual cost of being dead
+#c_trtA <- 12000 # annual cost of receiving treatment A
+#c_trtB <- 13000 # annual cost of receiving treatment B
+##### Utilities ----
+#u_H    <- 1     # annual utility of being Healthy
+#u_S1   <- 0.75  # annual utility of being Sick
+#u_S2   <- 0.5   # annual utility of being Sicker
+#u_D    <- 0     # annual utility of being dead
+#u_trtA <- 0.95  # annual utility when receiving treatment A
+#
+#### Transition rewards ----
+#du_HS1 <- 0.01  # disutility when transitioning from Healthy to Sick
+#ic_HS1 <- 1000  # increase in cost when transitioning from Healthy to Sick
+#ic_D   <- 2000  # increase in cost when dying
+```
+
+
+```{r}
+params <- list(
+### Transition rates (annual), and hazard ratios (HRs) ----
+r_HS1  = 0.15,  # constant annual rate of becoming Sick when Healthy
+r_S1H  = 0.5 ,  # constant annual rate of becoming Healthy when Sick
+hr_S1  = 3   ,  # hazard ratio of death in Sick vs Healthy 
+hr_S2  = 10  ,  # hazard ratio of death in Sicker vs Healthy 
+
+### Effectiveness of treatment B ----
+hr_S1S2_trtB = 0.6,  # hazard ratio of becoming Sicker when Sick under treatment B
+
+#* Weibull parameters for state-residence-dependent transition probability of 
+#* becoming Sicker when Sick conditional on surviving
+r_S1S2_scale = 0.08, # scale
+r_S1S2_shape = 1.1 , # shape
+
+v_r_mort_by_age = v_r_mort_by_age0, 
+
+### State rewards ----
+#### Costs ----
+c_H    = 2000 , # annual cost of being Healthy
+c_S1   = 4000 , # annual cost of being Sick
+c_S2   = 15000, # annual cost of being Sicker
+c_D    = 0    , # annual cost of being dead
+c_trtA = 12000, # annual cost of receiving treatment A
+c_trtB = 13000, # annual cost of receiving treatment B
 #### Utilities ----
-u_H    <- 1     # annual utility of being Healthy
-u_S1   <- 0.75  # annual utility of being Sick
-u_S2   <- 0.5   # annual utility of being Sicker
-u_D    <- 0     # annual utility of being dead
-u_trtA <- 0.95  # annual utility when receiving treatment A
+u_H    = 1   ,  # annual utility of being Healthy
+u_S1   = 0.75,  # annual utility of being Sick
+u_S2   = 0.5 ,  # annual utility of being Sicker
+u_D    = 0   ,  # annual utility of being dead
+u_trtA = 0.95,  # annual utility when receiving treatment A
 
 ### Transition rewards ----
-du_HS1 <- 0.01  # disutility when transitioning from Healthy to Sick
-ic_HS1 <- 1000  # increase in cost when transitioning from Healthy to Sick
-ic_D   <- 2000  # increase in cost when dying
+du_HS1 = 0.01,  # disutility when transitioning from Healthy to Sick
+ic_HS1 = 1000,  # increase in cost when transitioning from Healthy to Sick
+ic_D   = 2000  # increase in cost when dying
+)
 ```
 
 
@@ -237,9 +312,17 @@ The output is the structure of the model including the formulae.
 
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
 ```{r}
-model_res <- gmod_evaluate(model_struc)
+model_res <- gmod_gen_model_function(model_struc)
 #model_res
 ```
+```{r}
+#source("../R/myfun.R")
+
+my_markov_model(params = params)
+```
+
+
+
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
 
 We can load individual results here that we are interested in. For example, if we are interested in the Markov Trace of the Standard of Care treatment, we can type: 
