--- a/vignettes/getting_started_markov_gmod.Rmd
+++ b/vignettes/getting_started_markov_gmod.Rmd
@@ -33,3 +33,38 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(gmod)
 ```
+
+```{r}
+mygmod <- gmod(model_type = "Markov", n_cycles = 2) + 
+  decisions("StandardOfCare") + 
+  states("H", "D") + 
+  initial_probs(states = "H", probs = 1) +  
+  event_mapping(event = "die",  
+                values = c(F, T), 
+                results = c(curr_state(), "D"), 
+                probs = c(Inf, pDie(state))) 
+mygmod
+```
+
+```{r}
+pDie <- function(state){
+  if(state=="H") 0.1 else 0
+}
+pDie("H")
+pDie("D")
+```
+
+```{r}
+model_struc <- gmod_build(mygmod)
+model_struc
+```
+
+```{r}
+gmod_gen_model_function(model_struc)
+```
+
+```{r}
+my_markov_model(return_transition_prob = T, return_trace = T)
+```
+
+
