--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -35,7 +35,7 @@ library(magrittr)
 ```
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 75) + 
+mygmod <- gmod(model_type = "Markov", n_cycles = 25) + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states("H", "S1", "S2", "D") + 
   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
@@ -312,7 +312,7 @@ The output is the structure of the model including the formulae.
 
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
 ```{r}
-model_res <- gmod_gen_model_function(model_struc)
+gmod_gen_model_function(model_struc)
 #model_res
 ```
 
@@ -322,7 +322,26 @@ model_res <- gmod_gen_model_function(model_struc)
 my_markov_model(params = params)
 ```
 
+## simplified version 
+removes probability paths that are 0, and simplifies those that are 1.
+Then, we build the gmod Markov model by using the `gmod_build()` function.
+```{r}
+model_struc2 <- gmod_build(mygmod, params = params, simplify = TRUE)
+model_struc2
+```
+The output is the structure of the model including the formulae.  
 
+To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
+```{r}
+gmod_gen_model_function(model_struc2, model_function_name = "my_markov_model2")
+#model_res
+```
+
+```{r}
+#source("../R/myfun.R")
+
+my_markov_model2(params = params)
+```
 
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
 
