--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -88,9 +88,9 @@ pRecover <- function(state){
 ```
 This is a standard function and can be evaluated like any other function.  For example, we can type
 ```{r}
-pRecover("S1")
+#pRecover("S1")
 
-pRecover("S2")
+#pRecover("S2")
 ```
 
 probability of getting sick is also a function of a single state "H" otherwise is 0.
@@ -184,6 +184,25 @@ model_res <- gmod_gen_model_function(model_struc)
 ```{r}
 my_markov_model(params)
 ```
+
+## Simplified example with less equations
+Then, we build the gmod Markov model by using the `gmod_build()` function.
+```{r}
+model_struc2 <- gmod_build(mygmod, params = params, simplify = TRUE)
+model_struc2
+```
+The output is the structure of the model including the formulae.  
+
+To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
+```{r}
+model_res2 <- gmod_gen_model_function(model_struc2,  model_function_name = "my_markov_model2")
+#model_res
+```
+
+```{r}
+my_markov_model2(params)
+```
+
 
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
 
