--- a/vignettes/gmod_decision_tree.Rmd
+++ b/vignettes/gmod_decision_tree.Rmd
@@ -33,17 +33,17 @@ mygmod <- gmod(model_type = "Decision") +
   decisions("A", "B") + 
   event_mapping(event = "get_infection",  
                 values = c(T, F), 
-                results = c("Sick", "Healthy"), 
+                outcomes = c("Sick", "Healthy"), 
                 probs = c(pSick(decision), Inf)) + 
-  payoffs(life_expectancy = compute_le(outcome))
+  payoffs(life_expectancy = compute_le(final_outcome))
 
 ```
 The `gmod()` function creates a gmod object of type "Decision" standing for a decision tree.  
 For a Markov model, please see the Markov model Vignette.  
 The `decision()` function describes the decision options.  These can later be referred to with 
 the special keyword (decision) below.  There should be only one decisions layer per gmod object.
-The `event_mapping()` describes a single event "get_infection". This event takes two values TRUE or FALSE. [Below we expand this to use more than two values.]  If TRUE the person ends up with the "Sick" outcome, otherwise they end up with the "Healthy" Outcome. The probs argument defines the probability of getting sick.  Notice that we are using an external function `pSick` (that we will define next). This function returns a different value depending on the decision. The `Inf` is a place holder computes the complementary probbility (i.e., `1-pSick()`) and reduces the amount of typing required. 
-The payoffs layer defines the payoffs.  Here we use a single payoff life_expectancy the value of which is computed using the `compute_LE()` function by taking the special keyword outcome defined below. Outcomes are the results of the final events in the gmod object.  
+The `event_mapping()` describes a single event "get_infection". This event takes two values TRUE or FALSE. [Below we expand this to use more than two values.]  If TRUE the person ends up with the "Sick" final_outcome, otherwise they end up with the "Healthy" final_outcome. The probs argument defines the probability of getting sick.  Notice that we are using an external function `pSick` (that we will define next). This function returns a different value depending on the decision. The `Inf` is a place holder computes the complementary probbility (i.e., `1-pSick()`) and reduces the amount of typing required. 
+The payoffs layer defines the payoffs.  Here we use a single payoff life_expectancy the value of which is computed using the `compute_LE()` function by taking the special keyword final_outcome defined below. final_outcomes are the outcomes of the final events in the gmod object.  
 
 ```{r}
 pSick <- function(decision){
@@ -53,13 +53,13 @@ pSick <- function(decision){
 pSick is a simple function here that will return 0.5 if the decision="A", otherwise 0.7.  Later we will show how to create more complex probabilities that can take into account the value of prior events which will help us keep the code concise.
 
 ```{r}
-compute_le <- function(outcome){
-  if (outcome == "Sick") 20 else 40
+compute_le <- function(final_outcome){
+  if (final_outcome == "Sick") 20 else 40
 }
 ```
-Similar to `pSick` above, we define the `compute_le()` as a function of the outcome.  If Sick, it returns 20 years, if Healthy, it returns 40 years. 
+Similar to `pSick` above, we define the `compute_le()` as a function of the final_outcome.  If Sick, it returns 20 years, if Healthy, it returns 40 years. 
 
-NOTE: R is case sensitivie, so you have to make sure that all the oucomes, payoffs, values, decisions follow the same case.  For example, if we use `outcome=="sick"` that is not the same as `outcome=="Sick"`. 
+NOTE: R is case sensitivie, so you have to make sure that all the oucomes, payoffs, values, decisions follow the same case.  For example, if we use `final_outcome=="sick"` that is not the same as `final_outcome=="Sick"`. 
 
 Then, we can build the gmod object by calling `gmod_build()` function which returns the formulae of our decision tree as a list 
 ```{r}
@@ -76,11 +76,11 @@ my_decision_model()
 ```
 
 
-This list returns information about our tree.  For example, the outcomes and the payoffs. It also returns two tables the first one lists the expanded form of the tree and the formulae by decision and outcome and each path that leads to the outcome.  The second is a summary table for the formulae involved in the payoffs.  Let's take a look at the payoff summary table.
+This list returns information about our tree.  For example, the final_outcomes and the payoffs. It also returns two tables the first one lists the expanded form of the tree and the formulae by decision and final_outcome and each path that leads to the final_outcome.  The second is a summary table for the formulae involved in the payoffs.  Let's take a look at the payoff summary table.
 ```{r}
 model_struc$summary_formulae
 ```
-This table will return two formuale for life expectancy, one per decision. For example life expectancy of A equals `(1-(pSick('A')))*compute_le('Healthy')+(pSick('A'))*compute_le('Sick')`.  This is a meaningful formula as it describes the life expectancy of decision A as a weighted sum of probability of getting sick given A and life expectancy given each outcome Sick and Healthy.  We can also evaluate this formula directly of gmod
+This table will return two formuale for life expectancy, one per decision. For example life expectancy of A equals `(1-(pSick('A')))*compute_le('Healthy')+(pSick('A'))*compute_le('Sick')`.  This is a meaningful formula as it describes the life expectancy of decision A as a weighted sum of probability of getting sick given A and life expectancy given each final_outcome Sick and Healthy.  We can also evaluate this formula directly of gmod
 
 ```{r}
 (1-(pSick('A')))*compute_le('Healthy')+(pSick('A'))*compute_le('Sick')
@@ -100,8 +100,8 @@ The main output is a table containing the values of the payoffs.  We can see the
 
 In other vignette, we show other features, including:
 
-1. Event outcomes other than TRUE and FALSE
+1. Event final_outcomes other than TRUE and FALSE
 2. Multiple sequential events
 3. Multiple payoffs (e.g., costs and effectiveness) for cost-effectiveness analyses
-4. The probability of an event depending on the outcome of upstream events
-5. The payoffs depending on the intermediate outcomes from upstream events
+4. The probability of an event depending on the final_outcome of upstream events
+5. The payoffs depending on the intermediate final_outcomes from upstream events
