--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -38,7 +38,7 @@ mygmod <- gmod(model_type = "Markov", n_cycles = 75) +
   initial_probs(states = "H", probs = 1) +  
   event_mapping(event = "get_event",  
                 values = c("recover", "getsick", "progress", "die", "stay"), 
-                results = c("H", "S1", "S2", "D", curr_state()), 
+                outcomes = c("H", "S1", "S2", "D", curr_state()), 
                 probs = c(pRecover(state), pGetSick(state), pProgress(state, decision), pDie(state), Inf)) +  
   payoffs(cost = cost(state, decision), 
           utility = utility(state, decision))
@@ -46,7 +46,7 @@ mygmod <- gmod(model_type = "Markov", n_cycles = 75) +
 
 The `gmod()` function defines the model type as a Markov model and number of cycles as 75. The `decision()` function defines the treatment strategies.  The `initial_probs()` defines the initial probabilities. Here we only define the "Moderate" states as the starting state with probability equals 1. The other states will be set to 0. 
 
-Since the tutorial assumes that all the events happen simultaneously (i.e., no sequence), we add a single `event_mapping()` layer we model the individual outcomes separately.  We can interpret the event_mapping as the following: The event `get_event` can have 5 values: recover, getsick, progress, die, or stay in the same state.  These values will result in the following states: H, S1, S2, D and staying in the current state, respectively. The prob argument defines the probability of these outcomes.  For example, pRecover() defins the probability of recovering and it is a function of state because this probability is only applied if the state is "S1", and is 0 otherwise. Note here we use `Inf` here is as a placeholder to reduce the amount of typing required. Then, we define the payoffs of cost and utility and define each as a function of the state and the decision taken.
+Since the tutorial assumes that all the events happen simultaneously (i.e., no sequence), we add a single `event_mapping()` layer we model the individual final_outcomes separately.  We can interpret the event_mapping as the following: The event `get_event` can have 5 values: recover, getsick, progress, die, or stay in the same state.  These values will outcome in the following states: H, S1, S2, D and staying in the current state, respectively. The prob argument defines the probability of these final_outcomes.  For example, pRecover() defins the probability of recovering and it is a function of state because this probability is only applied if the state is "S1", and is 0 otherwise. Note here we use `Inf` here is as a placeholder to reduce the amount of typing required. Then, we define the payoffs of cost and utility and define each as a function of the state and the decision taken.
 
 The `curr_state()` is a build-in function that instructs gmod to compute the probability of a state returning to itself.
 
@@ -175,7 +175,7 @@ model_struc
 ```
 The output is the structure of the model including the formulae.  
 
-To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
+To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 ```{r}
 model_res <- gmod_gen_model_function(model_struc)
 #model_res
@@ -193,7 +193,7 @@ model_struc2
 ```
 The output is the structure of the model including the formulae.  
 
-To evaluate the model, we run `gmod_evaluate()` which returns the numerical results. 
+To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 ```{r}
 model_res2 <- gmod_gen_model_function(model_struc2,  model_function_name = "my_markov_model2")
 #model_res
@@ -206,12 +206,12 @@ my_markov_model2(params)
 
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
 
-We can load individual results here that we are interested in. For example, if we are interested in the Markov Trace of the Standard of Care treatment, we can type: 
+We can load individual outcomes here that we are interested in. For example, if we are interested in the Markov Trace of the Standard of Care treatment, we can type: 
 ```{r}
 model_res$Trace$StandardOfCare
 ```
 
-Similarly, we can load the summary results of the costs and utility of the strategies, such that:
+Similarly, we can load the summary outcomes of the costs and utility of the strategies, such that:
 ```{r}
 model_res$Summary
 ```
