--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -35,21 +35,22 @@ library(magrittr)
 ```
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 25) + 
+mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states("H", "S1", "S2", "D") + 
+  tunnels(states = c("S1", "S2"), lengths = c(3, 2)) + 
   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
   initial_probs(states = "H", probs = 1) +
   event_mapping(event = "die",  
               values = c(T, F), 
               outcomes = c("D", "get_event"), 
-              probs = c(pDie(state, cycle, v_r_mort_by_age), Inf)) +  
+              probs = c(pDie(state, cycle, cycle_in_state), Inf)) +  
   event_mapping(event = "get_event",  
                 values = c("recover", "getsick", "progress", "stay"), 
                 outcomes = c("H", "S1", "S2", curr_state()), 
                 probs = c(pRecover(state), 
                           pGetSick(state), 
-                          pProgress(state, decision, cycle_in_S1), 
+                          pProgress(state, decision, cycle_in_state), 
                           Inf)) +  
   payoffs(cost = cost(state, decision, get_event, die), 
           utility = utility(state, decision, get_event))
@@ -252,7 +253,7 @@ if (state=="S1") TRUE else FALSE
 
 Probability of death is a function of the state. For states S1 and S2 the rate of mortality is relative to the healthy rate multiplied by a hazard ratio for each state.
 ```{r}
-pDie <- function(state, cycle, v_r_mort_by_age){
+pDie <- function(state, cycle, cycle_in_state){
   r_HD <- v_r_mort_by_age[cycle]
   rDie <- switch(state, 
          "H" = r_HD,
