--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -35,10 +35,10 @@ library(magrittr)
 ```
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod(model_type = "Markov", n_cycles = 75) + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states("H", "S1", "S2", "D") + 
-  tunnels(states = c("S1", "S2"), lengths = c(3, 2)) + 
+  tunnels(states = c("S1", "S2"), lengths = c(NA, NA)) + 
   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
   initial_probs(states = "H", probs = 1) +
   event_mapping(event = "die",  
